--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<html>
-<head>
-<title>Pass me dem variables son</title>
-</head>
-<?php
+	<html>
+	<head>
+	<title>Query string</title>
+	</head>
+	<body>
+
+	<?php
 
 	// The value of the variable name is found
 	echo "<h1>Hello " . $_GET["name"] . "</h1>";
+
 	?>
-</html>
+
+	</body>
+	</html>
 	
