--- a/birthday.html
+++ b/birthday.html
@@ -1,11 +1,14 @@
 <html>
   <head>
-    Jack's Birthday List
+    <title>Jack's Birthday List</title>
   </head>
   <body>
   	<h1>Jack's Birthday List</h1>
-  	<p>-A new case for bass guitar
-     	-somtheing else
-		</p>
+	<ul>
+  	<li>-A new case for bass guitar</li>
+     	<li>-Things with llamas on them(Pens, water bottles, etc.)</li>
+	<li>-</li>
+	</ul>
+	</p>
   </body>
 <html>
