--- a/birthday.html
+++ b/birthday.html
@@ -5,9 +5,10 @@
   <body>
   	<h1>Jack's Birthday List</h1>
 	<ul>
-  	<li>-A new case for bass guitar</li>
-     	<li>-Things with llamas on them(Pens, water bottles, etc.)</li>
-	<li>-</li>
+  	<li>A new case for bass guitar</li>
+     	<li>Things with llamas on them(Pens, water bottles, etc.)</li>
+	<li>Wear OS smartwatch of some kind... Research to follow</li>
+	<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</li>
 	</ul>
 	</p>
   </body>
