--- a/birthday.html
+++ b/birthday.html
@@ -1,15 +1,21 @@
 <html>
   <head>
     <title>Jack's Birthday List</title>
+	 	<style>
+			div.main {
+    			text-align: center;
+			}
+		</style>
   </head>
   <body>
-  	<h1>Jack's Birthday List</h1>
-	<ul>
-  	<li>A new case for bass guitar</li>
-     	<li>Things with llamas on them(Pens, water bottles, etc.)</li>
-	<li>Wear OS smartwatch of some kind... Research to follow</li>
-	<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</li>
-	</ul>
-	</p>
+	<div class="main">
+  		<h1>Jack's Birthday List</h1>
+		<ul>
+  		<li>A new case for bass guitar</li>
+     		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
+		<li>Wear OS smartwatch of some kind... Research to follow</li>
+		<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</li>
+		</ul>
+	</div>
   </body>
 <html>
