--- a/birthday.html
+++ b/birthday.html
@@ -14,7 +14,8 @@
   		<li>A new case for bass guitar</li>
      		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
 		<li>Wear OS smartwatch of some kind... Research to follow</li>
-		<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</li>
+		<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</a></li>
+		<li><a href="https://www.amazon.com/TicWatch-Bluetooth-Payments-Assistant-Compatible/dp/B07C6S92B8">Ticwatch Pro Smartwatch</a></li>
 		</ul>
 	</div>
   </body>
