Changed ticwatch pro to ticwatch e

--- a/birthday.html
+++ b/birthday.html
@@ -14,7 +14,7 @@
   		<li>A new case for bass guitar</li>
      		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
 		<li><a href="https://www.amazon.com/Thermaltake-Drives-Docking-Station-ST0014U/dp/B01J4XNLN6?th=1"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</a></li>
-		<li><a href="https://www.amazon.com/TicWatch-Bluetooth-Payments-Assistant-Compatible/dp/B07C6S92B8">Ticwatch Pro Smartwatch</a></li>
+		<li><a href="https://www.amazon.ca/Ticwatch-Comfortable-Display-Compatible-Organized/dp/B077NSBVFN/ref=sr_1_3?ie=UTF8&qid=1537649658&sr=8-3&keywords=ticwatch%2Be&th=1">Ticwatch E Smartwatch</a></li>
 		</ul>
 	</div>
   </body>
