--- a/birthday.html
+++ b/birthday.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Jack's Birthday List</title>
+    <title>Jack's Christmas List</title>
 	 	<style>
 			div.main {
     			text-align: center;
@@ -9,13 +9,10 @@
   </head>
   <body>
 	<div class="main">
-  		<h1>Jack's Birthday List</h1>
+  		<h1>Jack's Christmas List</h1>
 		<ul>
-  		<li>A new case for bass guitar</li>
      		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
-		<li><a href="https://www.amazon.ca/Thermaltake-ST0014U-C-External-Enclosure-Components/dp/B01GF0X8I4/ref=sr_1_1?s=electronics&ie=UTF8&qid=1537652694&sr=1-1&keywords=thermaltake+blacx+duet"> thermaltake BlackX Duet, Dual Bay, USB 3.0(link attatched)</a></li>
-		<li><a href="https://www.amazon.ca/Ticwatch-Comfortable-Display-Compatible-Organized/dp/B077NSBVFN/ref=sr_1_3?ie=UTF8&qid=1537649658&sr=8-3&keywords=ticwatch%2Be&th=1">Ticwatch E Smartwatch(link attatched)</a></li>
-		<li> Case For My Bass Guitar</li>
+		<li>Bluetooth Keyboard</li>
 		</ul>
 	</div>
   </body>
