--- a/birthday.html
+++ b/birthday.html
@@ -4,16 +4,35 @@
 	 	<style>
 			div.main {
     			text-align: center;
+    			font-size: 50;
+    			font-family: monospace;
+			}
+			div.list {
+				font-size: 30;
+				font-family: sans-serif;
+			}
+			li {
+				line-height: 2;
+			}
+			body {
+				background-image: url("https://i.pinimg.com/236x/ed/d5/6a/edd56a55d3db7132972548da084cf3e0.jpg") ;
+				background-position: bottom;
+				background-repeat:  repeat;
+				background-attachment: fixed;
+				background-size:  300px;
+				background-color: #999;
 			}
 		</style>
   </head>
   <body>
 	<div class="main">
   		<h1>Jack's Christmas List</h1>
-		<ul>
-     		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
-			<li><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a>></li>
-		</ul>
+  		<div class="list">
+			<ul>
+	     		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
+				<li><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a></li>
+			</ul>
+		</div>
 	</div>
   </body>
 <html>
