added google calendar

--- a/homepage.html
+++ b/homepage.html
@@ -51,23 +51,26 @@
 </div>
 <div class="container">
 	<a href="https://netflix.com">
-		<div><img src="https://cdn0.iconfinder.com/data/icons/circle-icons/512/netflix.png" alt="Netflix" width="100"></div>
+		<div><img src="icons/netflix.png" alt="Netflix" width="100"></div>
 	</a>
 
 	<a href="https://twitch.tv">
-  		<div><img src="https://cdn4.iconfinder.com/data/icons/social-media-circle-6/1024/circle-11-512.png" alt="Twitch" width="100"></div>
+  		<div><img src="icons/twitch.png" alt="Twitch" width="100"></div>
   	</a>
 
   	<a href="https://youtube.com">
-  		<div><img src="http://www.vectorico.com/?wpfilebase_thumbnail=1&fid=1&name=youtube-icon.png" alt="Youtube" width="100"></div>
+  		<div><img src="icons/youtube.png" alt="Youtube" width="100"></div>
   	</a>
 
   	<a href="https://reddit.com">
-  		<div><img src="http://i.imgur.com/sdO8tAw.png" alt="Reddit" width="100"></div>
+  		<div><img src="icons/reddit.png" alt="Reddit" width="100"></div>
   	</a>
   	
-  	<a href="github.com">
-  		<div><img src="https://i.imgur.com/fG8pTrO.png" alt="Github" width="100"></div>
+  	<a href="https://github.com">
+  		<div><img src="icons/github.png" alt="Github" width="100"></div>
+  	</a>
+  	<a href="https://calendar.google.com">
+  		<div><img src="icons/calendar.png" alt="Google Calendar" width="100"></div>
   	</a>
 </div>
 
