--- a/birthday.html
+++ b/birthday.html
@@ -31,6 +31,7 @@
 			<ul>
 	     		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
 				<li><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a></li>
+				<li><a href="http://a.co/d/gqGGetk">Electronics Starter Kit</a></li>
 			</ul>
 		</div>
 	</div>
