removed li elements, replaced with p

--- a/birthday.html
+++ b/birthday.html
@@ -28,11 +28,9 @@
 	<div class="main">
   		<h1>Jack's Christmas List</h1>
   		<div class="list">
-			<ul>
-	     		<li>Things with llamas on them(Pens, water bottles, etc.)</li>
-				<li><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a></li>
-				<li><a href="http://a.co/d/gqGGetk">Electronics Starter Kit</a></li>
-			</ul>
+     		<p>Things with llamas on them(Pens, water bottles, etc.)</p>
+			<p><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a></p>
+			<p><a href="http://a.co/d/gqGGetk">Electronics Starter Kit</a></p>
 		</div>
 	</div>
   </body>
