added PSU to christmas list

--- a/birthday.html
+++ b/birthday.html
@@ -31,6 +31,7 @@
      		<p>Things with llamas on them(Pens, water bottles, etc.)</p>
 			<p><a href="http://a.co/d/7hfzagL">Gledopto LED Light Controller</a></p>
 			<p><a href="http://a.co/d/gqGGetk">Electronics Starter Kit</a></p>
+			<p><a href="https://www.amazon.ca/EVGA-Modular-Warranty-Compact-220-B3-0450-V1/dp/B071XS597S?th=1">EVGA B3 Power Supply (550 Watt)</a></p>
 		</div>
 	</div>
   </body>
