--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					Used for data to and from internal storage such as hard drives or disk drives
 				</td>
 				<td width = "25%">
-					<img src="https://sgcdn.startech.com/005329/media/products/gallery_large/PYO2SATA.C.jpg" height="150" width="150">
+					<img src="https://images-na.ssl-images-amazon.com/images/I/71qyPtLzX5L._SX425_.jpg" height="150" width="150">
 				</td>
 			</tr>
 
