added link to top project

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 	<p class="consoleText" style="font-size: 5vw;">
 		> My Computer Tech Projects So Far&#x2590;
 	</p>
-
-	<p class="consoleText" style="font-size: 3vw">
-		1. Computer Ports
-	</p>
+	<a href="School/Ports%20List.html">
+		<p class="consoleText" style="font-size: 3vw">
+			1. Computer Ports
+		</p>
+	</a>
+	
 	<div class=embed width=100% height=100% scrolling="no">
 		<iframe src="/School/Ports%20List.html" height="50%" width="50%" frameborder="0">
 		</iframe>
