--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 			text-align: center;
 			background-color: black;
 		}
-		.embed {
-		}
+
 		.consoleText {
 			font-family: monospace;
 			color: lightgreen;
+		}
+		.embed {
+			width: 25vw;
+			height: 25vw;
 		}
 	</style>
 </head>
@@ -24,20 +27,16 @@
 			1. Computer Ports
 		</p>
 	</a>
+
 	
-	<div class=embed width=100% height=100% scrolling="no">
-		<iframe src="/School/Ports%20List.html" height="50%" width="50%" frameborder="0">
-		</iframe>
-	</div>
+	<iframe src="School/Ports%20List.html" class="embed" frameborder="0">
+	</iframe>
+	
 	<a href="School/BuildFinal.html">
 		<p class="consoleText" style="font-size: 3vw">
 			2. PC Build
 		</p>
-		<div class=embed width=100% height=100%>
-			<iframe src="/School/BuildFinal.html" height="50%" width=height frameborder="0">
-			</iframe>
-		</div>
 	</a>
-</body>
-
-</html>
+	<iframe src="School/BuildFinal.html" class="embed" frameborder="0">
+	</iframe>
+</body></html>
