Added homepage landing thing

--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <html>
 
 <head>
+	<title>Jack Walmsley</title>
 	<style>
-		body {
+		.title {
+			font-size: 10vh;
 			text-align: center;
-			background-color: black;
+			font-family: sans-serif;
+			color: white;
+			padding-top: 10vh;
+			padding-bottom: 2vh;
 		}
 
-		.consoleText {
-			font-family: monospace;
-			color: lightgreen;
+		.subtitle {
+			font-size: 4vh;
+			text-align: center;
+			font-family: sans-serif;
+			color: white;
+			padding: 0vh;
 		}
-		.embed {
-			width: 25vw;
-			height: 25vw;
+
+		.links {
+			font-size: 3vh;
+			padding-top: 3vh;
+			text-align: center;
+			color: aliceblue;
 		}
+
+		body {
+			background: linear-gradient(0deg, rgba(77, 77, 77, 1) 0%, rgba(0, 0, 0, 1) 100%);
+			font-family: sans-serif;
+		}
+
 	</style>
 </head>
 
-<body height=100% width=100%>
-	<p class="consoleText" style="font-size: 5vw;">
-		> My Computer Tech Projects So Far&#x2590;
-	</p>
-	<a href="School/Ports%20List.html">
-		<p class="consoleText" style="font-size: 3vw">
-			1. Computer Ports
-		</p>
-	</a>
+<body>
+	<p class="title">Hey what's up y'all</p>
+	<p class="subtitle">Welcome to my website lmao</p>
+	<div class="links">
+		<!--		<a href="School/SchoolHome.html">School Things</a>-->
+	</div>
+</body>
 
-	
-	<iframe src="School/Ports%20List.html" class="embed" frameborder="0">
-	</iframe>
-	
-	<a href="School/BuildFinal.html">
-		<p class="consoleText" style="font-size: 3vw">
-			2. PC Build
-		</p>
-	</a>
-	<iframe src="School/BuildFinal.html" class="embed" frameborder="0">
-	</iframe>
-</body></html>
+</html>
