Added theres nothing else here lmao

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <body>
 	<p class="title">Hey what's up y'all</p>
-	<p class="subtitle">Welcome to my website lmao</p>
+	<p class="subtitle">Welcome to my website</p>
+	<p class="subtitle" style="padding-top: 80vh">There's nothing else here lmao</p>
 	<div class="links">
-		<!--		<a href="School/SchoolHome.html">School Things</a>-->
 	</div>
 </body>
 
