Changed text color to white from grey

--- a/Random Projects/Dream Country/index.html
+++ b/Random Projects/Dream Country/index.html
@@ -26,7 +26,7 @@
 
 		.option {
 			padding: 3vh;
-			background: linear-gradient(0deg, rgba(0, 0, 121, 1) 0%, rgba(0, 0, 255, 1) 100%);
+			background: blue;
 			margin: 5vh;
 			width: 30vw;
 			border: none;
