--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			padding: 5vh;
 			background: blue;
 			border-radius: 20px;
-			color: darkgrey;
+			color: white;
 			text-decoration: none;
 		}
 
