--- a/Random Projects/Dream Country/index.html
+++ b/Random Projects/Dream Country/index.html
@@ -15,7 +15,7 @@
 		.question {
 			padding: 5vh;
 			text-align: center;
-			font-size: 3vh;
+			font-size: 5vh;
 		}
 
 		.answers {
@@ -33,6 +33,8 @@
 			border-radius: 20px;
 			font-size: 2vh;
 			text-align: center;
+			color: white;
+			font-size: 3vh;
 		}
 
 	</style>
