Removed school and dream country stuff for public facing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<p class="title">Hey what's up y'all</p>
 	<p class="subtitle">Welcome to my website</p>
 	<div class="links">
-		<a href="School/SchoolHome.html" class="link">School Things</a>
+		<!--		<a href="School/SchoolHome.html" class="link">School Things</a>-->
 		<div style="height:15vh"></div>
 		<a href="Random%20Projects/RandomHome.html" class="link">My Random Projects</a>
 	</div>
