--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="links">
 		<!--		<a href="School/SchoolHome.html" class="link">School Things</a>-->
 		<div style="height:15vh"></div>
-		<a href="Random%20Projects/RandomHome.html" class="link">Random things I've made</a>
+		<!--		<a href="Random%20Projects/RandomHome.html" class="link">Random things I've made</a>-->
 	</div>
 </body>
 
