Added theres nothing else here

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 	<p class="subtitle">Welcome to my website</p>
 	<div class="links">
 		<!--		<a href="School/SchoolHome.html" class="link">School Things</a>-->
-		<div style="height:15vh"></div>
+		<div style="height:40vh"></div>
 		<!--		<a href="Random%20Projects/RandomHome.html" class="link">Random things I've made</a>-->
 	</div>
+	<p class="subtitle">There's nothing else here</p>
 </body>
 
 </html>
