--- a/animation.html
+++ b/animation.html
@@ -20,7 +20,7 @@
 </head>
 
 <body width=100% id="body">
-	<h1 class="titleText" id="typing" style="top: 30%"> background: rgb(0, 0, 0);</h1>
+	<h1 class="titleText" id="typing" style="top: 30%"> background: black;</h1>
 	<p class="titleText lateDisplay" style="top: 30%; font-size: 80">Jack Walmsley</p>
 	<p class="lateDisplay titleText" style="top: 60%; font-size: 20">That was a really cool animation wasn't it?</p>
 
