--- a/animation/animation.html
+++ b/animation/animation.html
@@ -6,14 +6,16 @@
 			overflow-x: hidden;
 			font-family: sans-serif;
 		}
+
 		.titleImg {
 			margin-bottom: 50px;
-			margin-left: 5vw; 
+			margin-left: 5vw;
 			width: 90%;
 			margin-top: 10vh;
 			top: 10%;
 			z-index: -1;
 		}
+
 		.titleText {
 			position: absolute;
 			text-align: center;
@@ -61,8 +63,9 @@
 	<div class="titles">
 		<h1 class="titleText" id="typing" style="top: 30%; color: black"> background: black;</h1>
 		<p class="titleText lateDisplay" style="top: 30%; font-size: 80">Jack Walmsley</p>
-		<img class="lateDisplay titleImg" src="Images/setup2.png">
+<!--		<img class="lateDisplay titleImg" src="Images/setup2.png">-->
 	</div>
+<!--
 	<div class="skills lateDisplay" style="top: 100%;">
 		<p class="sectionHeader">Skills</p>
 		<p class="sectionBody">Proficiency in various languages</p>
@@ -71,6 +74,7 @@
 		<p class="sectionBody">Some experience in web backend development in Python with Flask</p>
 		<p class="sectionBody">That was a really cool website animation, wasnt it?</p>
 	</div>
+-->
 	<script>
 		var i = 0;
 		var txt = document.getElementById("typing").innerHTML;
