--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div style="height:40vh"></div>
 		<!--		<a href="Random%20Projects/RandomHome.html" class="link">Random things I've made</a>-->
 	</div>
-	<p class="subtitle">There's nothing else here</p>
+	<p class="subtitle">There's nothing else here lol</p>
 </body>
 
 </html>
