Added robotics to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -109,6 +109,9 @@
 		<p class="sectionBody">Backend developer - Aphel</p>
 		<p class="sectionSubpoint">An announcement and news system for schools</p>
 		<p class="sectionSubpoint">Started by myself and a few other students </p>
+		<p class="sectionBody">Co-Developer - The 6ix Robotics</p>
+		<p class="sectionSubpoint">A Vex Robotics team</p>
+		<p class="sectionSubpoint">Wrote a desktop application to design the autonomous path for the robot to take</p>
 	</div>
 	<div class="header lateDisplay" style="top: 200%">
 		<p class="sectionHeader">Achievements</p>
