Changed to lesscss for variable support

--- a/Material/index.html
+++ b/Material/index.html
@@ -1,13 +1,17 @@
 <html>
 	<head>
 		<title>Material Design - llamaorg</title>
+		<!-- CSS is not written to material.css. -->
+		<!-- LESSCSS is written to styles.less and then compiled -->
 		<link href="material.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 	</head>
 	<body class="dark-theme">
 		<div class="dark-theme title-text top-bar height-1 high-emphasis">
-			Title Of Page
+			<div class="hover-circle"></div><i class="material-icons menu-open-button">menu</i>Title Of Page
 		</div>
-		<div class="dark-theme height-1 card">
+		<div class="dark-theme card">
 			<p class="card-title-text high-emphasis">
 				Title Of Card
 			</p>
@@ -15,15 +19,17 @@
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent erat tellus, pretium eu feugiat a, interdum ut dui.
 			</p>
 		</div>
-		<div class="dark-theme height-1 card">
+		<div class="dark-theme card">
 			<p class="card-title-text disabled-text">
 				Disabled Card
 			</p>
 			<p class="body-text disabled-text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum urna sed massa bibendum, a tristique nulla tempor. Integer vitae nulla non massa imperdiet pulvinar nec ac est. Vestibulum congue egestas turpis ut mattis.
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum urna sed massa bibendum,
+				a tristique nulla tempor. Integer vitae nulla non massa imperdiet pulvinar nec ac est. 
+				Vestibulum congue egestas turpis ut mattis.
 			</p>
 		</div>
-		<div class="dark-theme height-1 card">
+		<div class="dark-theme card">
 			<p class="card-title-text high-emphasis">
 				Title Of Card
 			</p>
@@ -35,7 +41,7 @@
 			+
 		</div>
 		<div class="dark-theme bottom-bar height-2">
-			Stuff
+			Bottom Bar
 		</div>
 	</body>
 </html>
