Added mysterious subtitle

--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
 <body>
 	<p class="title">Hey what's up y'all</p>
 	<p class="subtitle">Welcome to my website</p>
-	<div class="links">
-		<!--		<a href="School/SchoolHome.html" class="link">School Things</a>-->
-		<div style="height:40vh"></div>
-		<!--		<a href="Random%20Projects/RandomHome.html" class="link">Random things I've made</a>-->
-	</div>
-	<p class="subtitle">There's nothing else here lol</p>
+	<p class="subtitle">There's nothing else here...</p>
+	<p class="subtitle">..yet?</p>
 </body>
 
 </html>
