Moved styling to lesscss

--- a/index.html
+++ b/index.html
@@ -1,27 +1,7 @@
 <html>
 
 <head>
-	<style>
-		body {
-			overflow-x: hidden;
-			font-family: sans-serif;
-		}
-
-
-		.titleText {
-			position: absolute;
-			text-align: center;
-			vertical-align: middle;
-			width: 100%;
-			font-size: 50;
-			color: azure;
-		}
-
-		.lateDisplay {
-			opacity: 0;
-		}
-
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body id="body">
