Setup CSS for full-page sections, subheadings, and body texts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
 </head>
 
 <body id="body">
-<div class="titles">
-    <p class="title titleText" style="top: 30%">Jack Walmsley</p>
-    <span class="material-icons title scroll-hint" style="top: 90%">keyboard_arrow_down</span>
+<div class="page">
+    <p class="title title-text" style="padding-top: 20%;">Jack Walmsley</p>
+    <span class="material-icons title scroll-hint" style="margin-top: 10%;">keyboard_arrow_down</span>
+</div>
+<div class="page">
+    <p class="section-title-text">Title Text</p>
+    <ul class="section-body-text">
+        <li>This</li>
+        <li>Is some sample text</li>
+        <li>Also this!</li>
+    </ul>
+</div>
+<div class="page">
+    <p class="section-title-text">Additional Title Text</p>
+    <ul class="section-body-text">
+        <li>Additional subtitle text</li>
+        <li>Isn't that nifty</li>
+        <li>Wow I wish there was something interesting here</li>
+    </ul>
 </div>
 <script>
     // Scroll hint fading
