--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 <body id="body">
 <div class="page">
-    <p class="title title-text" style="padding-top: 20%;">Jack Walmsley</p>
+    <p class="title title-text" style="padding-top: 20%;">Go fuck yourself</p>
 </div>
-<script>
-    location.href = "mailto:jeff.schust@peelsb.com?bcc=JackForValedictorian@protonmail.com&?subject=Valedictorian%20Nominations&body=Hello%20Mr.%20Schust%2C%0D%0A%0D%0AI%20would%20like%20to%20nominate%20Jack%20Walmsley%20as%20valedictorian%20for%20the%20class%20of%202021.%0D%0A%0D%0AThank%20You";
-</script>
 </body>
 </html>
